zetasql/parser/testdata/time_travel.test
# TODO: Remove no_show_parse_location_text after parse locations
# have been manually verified as correct.
[default no_show_parse_location_text]
SELECT * FROM t FOR SYSTEM_TIME AS OF TIMESTAMP '2011-01-01 12:20:20'
--
QueryStatement [0-69]
  Query [0-69]
    Select [0-69]
      SelectList [7-8]
        SelectColumn [7-8]
          Star(*) [7-8]
      FromClause [9-69]
        TablePathExpression [14-69]
          PathExpression [14-15]
            Identifier(t) [14-15]
          ForSystemTime [16-69]
            DateOrTimeLiteral(TYPE_TIMESTAMP) [38-69]
              StringLiteral('2011-01-01 12:20:20') [48-69]
--
SELECT
  *
FROM
  t FOR SYSTEM_TIME AS OF TIMESTAMP '2011-01-01 12:20:20'

==

SELECT * FROM t FOR SYSTEM TIME AS OF TIMESTAMP '2011-01-01 12:20:20'
--
QueryStatement [0-69]
  Query [0-69]
    Select [0-69]
      SelectList [7-8]
        SelectColumn [7-8]
          Star(*) [7-8]
      FromClause [9-69]
        TablePathExpression [14-69]
          PathExpression [14-15]
            Identifier(t) [14-15]
          ForSystemTime [16-69]
            DateOrTimeLiteral(TYPE_TIMESTAMP) [38-69]
              StringLiteral('2011-01-01 12:20:20') [48-69]
--
SELECT
  *
FROM
  t FOR SYSTEM_TIME AS OF TIMESTAMP '2011-01-01 12:20:20'

==

SELECT * FROM t FOR SYSTEM_TIME AS OF TIMESTAMP_ADD(@yesterday, INTERVAL 2 HOUR)
--
QueryStatement [0-80]
  Query [0-80]
    Select [0-80]
      SelectList [7-8]
        SelectColumn [7-8]
          Star(*) [7-8]
      FromClause [9-80]
        TablePathExpression [14-80]
          PathExpression [14-15]
            Identifier(t) [14-15]
          ForSystemTime [16-80]
            FunctionCall [38-80]
              PathExpression [38-51]
                Identifier(TIMESTAMP_ADD) [38-51]
              ParameterExpr [52-62]
                Identifier(yesterday) [53-62]
              IntervalExpr [64-79]
                IntLiteral(2) [73-74]
                Identifier(HOUR) [75-79]
--
SELECT
  *
FROM
  t FOR SYSTEM_TIME AS OF TIMESTAMP_ADD(@yesterday, INTERVAL 2 HOUR)
==

SELECT * FROM t FOR SYSTEM_TIME AS OF TIMESTAMP_ADD(@@sysvar1, INTERVAL @@sysvar2 HOUR)
--
QueryStatement [0-87]
  Query [0-87]
    Select [0-87]
      SelectList [7-8]
        SelectColumn [7-8]
          Star(*) [7-8]
      FromClause [9-87]
        TablePathExpression [14-87]
          PathExpression [14-15]
            Identifier(t) [14-15]
          ForSystemTime [16-87]
            FunctionCall [38-87]
              PathExpression [38-51]
                Identifier(TIMESTAMP_ADD) [38-51]
              SystemVariableExpr [52-61]
                PathExpression [54-61]
                  Identifier(sysvar1) [54-61]
              IntervalExpr [63-86]
                SystemVariableExpr [72-81]
                  PathExpression [74-81]
                    Identifier(sysvar2) [74-81]
                Identifier(HOUR) [82-86]
--
SELECT
  *
FROM
  t FOR SYSTEM_TIME AS OF TIMESTAMP_ADD(@@sysvar1, INTERVAL @@sysvar2 HOUR)
==

SELECT * FROM a.b.c.d.e FOR SYSTEM_TIME AS OF ts
--

QueryStatement [0-48]
  Query [0-48]
    Select [0-48]
      SelectList [7-8]
        SelectColumn [7-8]
          Star(*) [7-8]
      FromClause [9-48]
        TablePathExpression [14-48]
          PathExpression [14-23]
            Identifier(a) [14-15]
            Identifier(b) [16-17]
            Identifier(c) [18-19]
            Identifier(d) [20-21]
            Identifier(e) [22-23]
          ForSystemTime [24-48]
            PathExpression [46-48]
              Identifier(ts) [46-48]
--
SELECT
  *
FROM
  a.b.c.d.e FOR SYSTEM_TIME AS OF ts
==

SELECT * FROM a.b.c.d.e FOR SYSTEM_TIME AS OF CURRENT_TIMESTAMP WITH OFFSET
--
ERROR: Syntax error: Expected end of input but got keyword WITH [at 1:65]
SELECT * FROM a.b.c.d.e FOR SYSTEM_TIME AS OF CURRENT_TIMESTAMP WITH OFFSET
                                                                ^
==

SELECT * FROM a.b.c.d.e FOR SYSTEM_TIME AS OF CURRENT_TIMESTAMP TABLESAMPLE RESERVOIR(100 ROWS) REPEATABLE (10)
--
QueryStatement [0-111]
  Query [0-111]
    Select [0-111]
      SelectList [7-8]
        SelectColumn [7-8]
          Star(*) [7-8]
      FromClause [9-111]
        TablePathExpression [14-111]
          PathExpression [14-23]
            Identifier(a) [14-15]
            Identifier(b) [16-17]
            Identifier(c) [18-19]
            Identifier(d) [20-21]
            Identifier(e) [22-23]
          ForSystemTime [24-63]
            FunctionCall [46-63]
              PathExpression [46-63]
                Identifier(`CURRENT_TIMESTAMP`) [46-63]
          SampleClause [64-111]
            Identifier(RESERVOIR) [76-85]
            SampleSize [86-94]
              IntLiteral(100) [86-89]
            SampleSuffix [96-111]
              RepeatableClause [96-111]
                IntLiteral(10) [108-110]
--
SELECT
  *
FROM
  a.b.c.d.e FOR SYSTEM_TIME AS OF `CURRENT_TIMESTAMP`() TABLESAMPLE RESERVOIR(100 ROWS) REPEATABLE (10)
==

SELECT * FROM a.b.c @{key=value} AS y FOR SYSTEM_TIME AS OF ts
--


QueryStatement [0-62]
  Query [0-62]
    Select [0-62]
      SelectList [7-8]
        SelectColumn [7-8]
          Star(*) [7-8]
      FromClause [9-62]
        TablePathExpression [14-62]
          PathExpression [14-19]
            Identifier(a) [14-15]
            Identifier(b) [16-17]
            Identifier(c) [18-19]
          Hint [20-32]
            HintEntry [22-31]
              Identifier(key) [22-25]
              PathExpression [26-31]
                Identifier(value) [26-31]
          Alias [33-37]
            Identifier(y) [36-37]
          ForSystemTime [38-62]
            PathExpression [60-62]
              Identifier(ts) [60-62]
--
SELECT
  *
FROM
  a.b.c @{ key = value } AS y FOR SYSTEM_TIME AS OF ts
==

SELECT * FROM a FOR SYSTEM_TIME AS OF t1 LEFT OUTER JOIN b FOR SYSTEM_TIME AS OF t2
--

QueryStatement [0-83]
  Query [0-83]
    Select [0-83]
      SelectList [7-8]
        SelectColumn [7-8]
          Star(*) [7-8]
      FromClause [9-83]
        Join(LEFT) [41-83]
          TablePathExpression [14-40]
            PathExpression [14-15]
              Identifier(a) [14-15]
            ForSystemTime [16-40]
              PathExpression [38-40]
                Identifier(t1) [38-40]
          TablePathExpression [57-83]
            PathExpression [57-58]
              Identifier(b) [57-58]
            ForSystemTime [59-83]
              PathExpression [81-83]
                Identifier(t2) [81-83]
--
SELECT
  *
FROM
  a FOR SYSTEM_TIME AS OF t1
  LEFT JOIN
  b FOR SYSTEM_TIME AS OF t2
==

SELECT * FROM c.t, t.r1 r FOR SYSTEM_TIME AS OF ts, r.r2

--
QueryStatement [0-56]
  Query [0-56]
    Select [0-56]
      SelectList [7-8]
        SelectColumn [7-8]
          Star(*) [7-8]
      FromClause [9-56]
        Join(COMMA) [50-56]
          Join(COMMA) [17-50]
            TablePathExpression [14-17]
              PathExpression [14-17]
                Identifier(c) [14-15]
                Identifier(t) [16-17]
            TablePathExpression [19-50]
              PathExpression [19-23]
                Identifier(t) [19-20]
                Identifier(r1) [21-23]
              Alias [24-25]
                Identifier(r) [24-25]
              ForSystemTime [26-50]
                PathExpression [48-50]
                  Identifier(ts) [48-50]
          TablePathExpression [52-56]
            PathExpression [52-56]
              Identifier(r) [52-53]
              Identifier(r2) [54-56]
--
SELECT
  *
FROM
  c.t,
  t.r1 AS r FOR SYSTEM_TIME AS OF ts,
  r.r2
==

# Error cases
# -----------

SELECT * FROM a FOR SYSTEM TIME t
--

ERROR: Syntax error: Expected keyword AS but got identifier "t" [at 1:33]
SELECT * FROM a FOR SYSTEM TIME t
                                ^
==

SELECT * FROM a FOR SYSTEM_TIME AS OF t @{key=value}
--

ERROR: Syntax error: Expected end of input but got "@" [at 1:41]
SELECT * FROM a FOR SYSTEM_TIME AS OF t @{key=value}
                                        ^
==

SELECT * FROM tvf() FOR SYSTEM_TIME AS OF t1
--

ERROR: Syntax error: Expected end of input but got keyword FOR [at 1:21]
SELECT * FROM tvf() FOR SYSTEM_TIME AS OF t1
                    ^
==

SELECT * FROM (SELECT * FROM t) FOR SYSTEM_TIME AS OF t1
--
ERROR: Syntax error: Expected end of input but got keyword FOR [at 1:33]
SELECT * FROM (SELECT * FROM t) FOR SYSTEM_TIME AS OF t1
                                ^
